--- a/src/main/resources/static/project_details.html
+++ b/src/main/resources/static/project_details.html
@@ -88,7 +88,11 @@
 		<script type="text/html" id="option">
 			<a class="layui-btn layui-btn-xs" lay-event="detail">详情</a>
 		</script>
-
+		
+		<script type="text/html" id="courseStatus_html">
+			<div class="layui-table-cell laytable-cell-1-0-4">{{d.courseStatus==1?'上架':'下架'}}</div>
+		</script>
+		
 		<script type="text/javascript" src="res/jquery-3.4.1.min.js"></script>
 		<script type="text/javascript" src="layui/layui.js"></script>
 
@@ -140,6 +144,7 @@
 								field: 'courseStatus',
 								title: '课程状态',
 								width: 150,
+								templet:"#courseStatus_html",
 								align: 'center'
 							}, {
 								field: 'courseAbilityTraining',
