--- a/src/main/resources/static/create_new_project_before.html
+++ b/src/main/resources/static/create_new_project_before.html
@@ -88,10 +88,10 @@
 						<ul>
 							<li style="line-height: 38px;"><button id="checkbox_btn" class="layui-btn layui-btn-sm layui-bg-gray">全选</button></li>
 							<li><input type="checkbox" name="applyPhaseId" value="1" lay-skin="primary" title="第一阶段课程5-7岁"></li>
-							<li><input type="checkbox" name="applyPhaseId" value="2" lay-skin="primary" title="第一阶段课程8-10岁"></li>
-							<li><input type="checkbox" name="applyPhaseId" value="3" lay-skin="primary" title="第一阶段课程11-12岁"></li>
-							<li><input type="checkbox" name="applyPhaseId" value="4" lay-skin="primary" title="第一阶段课程13-14岁"></li>
-							<li><input type="checkbox" name="applyPhaseId" value="5" lay-skin="primary" title="第一阶段课程15-16岁"></li>
+							<li><input type="checkbox" name="applyPhaseId" value="2" lay-skin="primary" title="第二阶段课程8-10岁"></li>
+							<li><input type="checkbox" name="applyPhaseId" value="3" lay-skin="primary" title="第三阶段课程11-12岁"></li>
+							<li><input type="checkbox" name="applyPhaseId" value="4" lay-skin="primary" title="第四阶段课程13-14岁"></li>
+							<li><input type="checkbox" name="applyPhaseId" value="5" lay-skin="primary" title="第五阶段课程15-16岁"></li>
 						</ul>
 					</div>
 				</div>
